	Intel S2600BPB product id.

	* ipmi-oem/ipmi-oem-intel.c (_get_smtp_configuration_data)
	(_set_smtp_configuration_data),
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-spec.h:
	Update missing comments on motherboard support.

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-spec.h:
	Remove accidental Dell sensor types included in header.

	Begin Intel OEM extensions refactoring.

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-comp-code-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-event-reading-type-code-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-netfn-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-number-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-types-oem-intel-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-slave-address-oem-intel-spec.h,
	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-intel-spec.c,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-spec.h:
	Splice out motherboard specific extensions into new files and rename a number of
	macros & variables accordingly.

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-comp-code-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-event-reading-type-code-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-number-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-slave-address-oem-intel-s5500wb-spec.h,
	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-intel-s5500wb-spec.c,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-common-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-s5500wb-spec.h,
	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-s2600jf-spec.h,